src/styles/about.css
#about {
  padding: 48px;
}

#about > h5 {
  font-family: "Merienda";
  font-size: 36px;
  margin-bottom: 64px;
}

#about > ul {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 48px;
}

.about-list-item {
  display: flex;
  font-size: 24px;
  justify-content: center;
  gap: 12px;
}

.about-list-item {
  flex-direction: row;
  align-items: center;
  text-align: start;
}

